<resources>
    <string name="app_name">ForWork</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_contract">My Contracts</string>
    <string name="menu_create_contract">Add Co-Workspace</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_setting">Setting</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="search_hint">Search by place names</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_search">Search by place name</string>
    <string-array name="location_list">
        <item>alor setar</item>
        <item>cyberjaya</item>
        <item>george town</item>
        <item>ipoh</item>
        <item>johor bahru</item>
        <item>kuala lumpur</item>
        <item>kuching</item>
        <item>malacca</item>
        <item>petaling jaya</item>
        <item>shah alam</item>
        <item>subang jaya</item>
        <item>others</item>
    </string-array>
    <string name="workspace_img_desc">Working space image</string>
    <string name="workspace_daily">Daily</string>
    <string name="workspace_weekly">Weekly</string>
    <string name="work_space_monthly">Monthly</string>
    <string-array name="workspace_names">
        <item>Scoopoint</item>
        <item>MSOGO</item>
        <item>Habitat Coworking Cafe</item>
        <item>CoHere</item>
        <item>aCAT Penang</item>
        <item>The Venture Working Space</item>
    </string-array>
    <string-array name="workspace_address">
        <item>Tamarins House, George Town</item>
        <item>Jalan Dr Lim Chwee Leong</item>
        <item>Taman Tanjing Indah, Butterworth</item>
        <item>Jalan Tanjung Tokong</item>
        <item>Lintang Bayan Lepas 11</item>
        <item>2nd Floor, 26-B Jalan Kenari</item>
    </string-array>

    <array name="workspace_images">
        <item>@drawable/workspace_img</item>
        <item>@drawable/workspace_img2</item>
        <item>@drawable/workspace_img3</item>
        <item>@drawable/workspace_img4</item>
        <item>@drawable/workspace_img5</item>
        <item>@drawable/workspace_img6</item>
    </array>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_err_msg">Authentication Failed.Please Try Again</string>
    <string name="menu_logout">Logout</string>
    <string name="user_lessor">Lessor</string>
    <string name="user_lessee">Lessee</string>
    <string name="feedback_string">We would like your feedback to improve our app.</string>
    <string name="feedback_category">Select a feedback category</string>
    <string name="feedback_suggestion">Suggestion</string>
    <string name="feedback_complaint">Something is not quite right</string>
    <string name="feedback_compliment">Compliment</string>
    <string name="feedback_comment">Leave your comment here*</string>
    <string name="feedback_sent">Feedback has been sent</string>
    <string name="submit_btn">Submit</string>
    <string name="next_btn">next</string>
    <string name="contract_duration">Minimum duration</string>
    <string name="contract_fee">Fee (ETH)</string>
    <string name="contract_charge_rate">Charge Rate</string>
    <string name="place_name">Place name*</string>
    <string name="workspace_description">Description*</string>
    <string name="workspace_address">Address*</string>
    <string name="workspace_capacity">Capacity (people)*</string>
    <string name="opening_hours">Opening hours*</string>
    <string name="workspace_amenities">Amenities*</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amenities_title">Amenities</string>
    <string name="amenities_fragment_ok">OK</string>
    <string name="amenities_fragment_cancel">Cancel</string>
    <string name="create_contract">Create contract</string>
    <string name="helper_text_charge_rate">E.g. per hour/day/month</string>
    <string name="min_duration_day">Day(s)</string>
    <string name="min_duration_week">Week(s)</string>
    <string name="min_duration_month">Month(s)</string>
    <string name="filter_area">Area</string>
    <string name="filter_fee">Maximum fee (ETH)</string>
    <string name="filter_title">Search Filter</string>
    <string name="filter_apply">APPLY</string>
    <string name="min_duration">1</string>
    <string name="view_contract_btn">View Contract</string>
    <string name="view_workspace_desc">About the workspace</string>
    <string name="view_opening_hour">Opening Hour</string>
    <string name="view_address">Address</string>
    <string name="view_capacity">Capacity</string>
    <string name="sign_contract_btn">sign contract</string>
    <string name="view_min_duration">Minimum duration</string>
    <string-array name="amenitiesList">
        <item>High-Speed Wifi</item>
        <item>Air Conditioning</item>
        <item>24hr Member Access</item>
        <item>Catering Kitchen</item>
        <item>Personal Lockers</item>
        <item>Free Drinking Water</item>
        <item>Snacks Available for Purchase</item>
        <item>Conference Room</item>
        <item>Computers(PCs)</item>
        <item>Printer</item>
        <item>Scanner</item>
    </string-array>
    <string-array name="userType">
        <item>Lessor</item>
        <item>Lessee</item>
    </string-array>
    <string name="title_activity_lessor_main">LessorMainActivity</string>
    <string name="upload_images">Upload Images*</string>
    <string name="img_file_type">image/*</string>
    <string name="display_selected_count">\u0020(\u0020</string>
    <string name="display_selected_text">\u0020selected)</string>
    <string name="upload_img_alert">Please upload at least one workspace image</string>
    <string name="select_amenities_alert">Please select the amenities</string>
    <string name="add_coworkspace">Add Your Co-Workspace</string>
    <string name="feedback_label">Feedback</string>
    <string name="my_contract_label">My Contracts</string>
    <string name="choose_user_type">You are</string>
    <string name="user_type_tag">UserType</string>
    <string name="location_states">Location (States)*</string>
    <string name="enter_private_key">Enter your private key</string>
    <!--
    <string-array name="chargeRateList">
        <item>per hour</item>
        <item>per day</item>
        <item>per week</item>
        <item>per month</item>
    </string-array>-->
</resources>
