<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/feedback_layout"
    android:background="@color/light_background_colour"
    tools:context=".FeedbackActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_string"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_category"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/suggestion"
                android:text="@string/feedback_suggestion"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/complaint"
                android:text="@string/feedback_complaint" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/compliment"
                android:text="@string/feedback_compliment" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:id="@+id/comment"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_comment"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitFeedback"
            android:onClick="submitFeedback"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/submit_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>

</LinearLayout>