<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/light_background_colour">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_area">

        <AutoCompleteTextView
            android:id="@+id/filter_area_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/filter_period_group"
        android:layout_marginTop="@dimen/activity_top_margin">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_daily"
            android:text="@string/workspace_daily"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_weekly"
            android:text="@string/workspace_weekly"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_monthly"
            android:text="@string/work_space_monthly"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_fee">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amenities_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/activity_top_margin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amenities_scrollView"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/filter_layout"></LinearLayout>
    </ScrollView>

</LinearLayout>