<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_colour"
    android:id="@+id/lessor_contract_layout"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".LessorContractActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contract_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:hint="@string/contract_duration"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/contract_horizontal_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contract_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_weight="1"
            android:hint="@string/contract_fee"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_weight="1"
            android:id="@+id/charge_rate"
            android:hint="@string/contract_charge_rate"
            app:helperText="@string/helper_text_charge_rate"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_gravity="center"
        android:id="@+id/create_contract"
        android:text="@string/create_contract"
        android:onClick="createContract"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        style="@style/Widget.MaterialComponents.Button" />

</LinearLayout>