<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_colour"
    android:orientation="vertical"
    tools:context=".ViewWorkSpaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:elevation="@dimen/elevation">

        <TextView
            android:id="@+id/view_workspace_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vladimir Nabokov"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_period"
            android:layout_below="@+id/view_workspace_name"
            android:text="@string/workspace_daily"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/light_background_colour" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="@string/view_contract_btn"
            android:onClick="viewContract"
            style="@style/Widget.MaterialComponents.Button" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <ImageView
                android:id="@+id/view_workspace_img"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:src="@drawable/workspace_img5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_workspace_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_workspace_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/view_opening_hour"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:id="@+id/view_opening_hour"
                android:text="Mon-Fri   9:00 am - 6:00pm\nSat   Closed\nSun   Closed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/view_address"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="Level 20, 1-chōme-6-2 Marunouchi, Chiyoda City, Tōkyō-to 100-0005, Japan, Tokyo, Japan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/view_capacity"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:id="@+id/view_capacity"
                android:text="30 people" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Images"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_img_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/amenities_title"
                android:layout_marginBottom="@dimen/activity_top_margin" />

            <LinearLayout
                android:id="@+id/view_amenities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/activity_margin"></LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>